[package]
name = "advent2020"
version = "0.1.0"
authors = ["Arne Dußin <arne.dussin@gmail.com>"]
edition = "2018"

[dev-dependencies]
criterion = "*"

[[bin]]
name = "01"
path = "src/01/main.rs"

[[bin]]
name = "02"
path = "src/02/main.rs"

[[bin]]
name = "03"
path = "src/03/main.rs"

[[bin]]
name = "04"
path = "src/04/main.rs"

[[bin]]
name = "05"
path = "src/05/main.rs"

[[bin]]
name = "06"
path = "src/06/main.rs"

[[bin]]
name = "07"
path = "src/07/main.rs"

[[bin]]
name = "08"
path = "src/08/main.rs"

[[bin]]
name = "09"
path = "src/09/main.rs"

[[bin]]
name = "11"
path = "src/11/main.rs"

[[bin]]
name = "12"
path = "src/12/main.rs"

[[bench]]
name = "bench_11"
harness = false

[dependencies]
thiserror = "*"
